[LBSE] Fix RenderSVGResourceClipper introduction regressions https://bugs.webkit.org/show_bug.cgi?id=263650

Reviewed by Nikolas Zimmermann.

This patch fixes regressions introduced by r269635, I falsely relied on buildbot, but
LBSE needs some manual checking.

* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::paintSVGResourceLayer): remove incorrect save() call.
(WebCore::RenderLayer::paintLayerContents): test correct paint flags variable for PaintingSVGClippingMask.
(WebCore::RenderLayer::hitTestLayer): add logic to return false for  hit test of resources and hidden containers.
* Source/WebCore/rendering/RenderLayerInlines.h:
(WebCore::RenderLayer::hasNonOpacityTransparency const): logic was inverted.
* Source/WebCore/rendering/svg/SVGResources.cpp:
(WebCore::SVGResources::buildCachedResources): do not add pending resource for LBSE clippers.

Canonical link: https://commits.webkit.org/269774@main